@@ -1,14 +1,16 @@
 require 'cucumber/formatter/console'
+require 'cucumber/formatter/io'
 
 module Cucumber
   module Formatter
     # The formatter used for <tt>--format progress</tt>
     class Progress
       include Console
+      include Io
       attr_reader :step_mother
 
-      def initialize(step_mother, io, options)
-        @step_mother, @io, @options = step_mother, io, options
+      def initialize(step_mother, path_or_io, options)
+        @step_mother, @io, @options = step_mother, ensure_io(path_or_io, "progress"), options
       end
 
       def after_features(features)
